# Caelestis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demoscenes/: ArcballScene.cpp  CMakeLists.txt  ClusteredForward.cpp  ForwardPlus.cpp  House.cpp  IcosphereScene.cpp  RendergraphSketch.cpp  Tether.cpp  VolumetricForward.cpp
demoscenes/scene_resources/shaders/: earthsphere.frag  earthsphere.frag.spv  earthsphere.vert  earthsphere.vert.spv  house.vert.spv
foundation/: CMakeLists.txt  ReadMe.md
foundation/include/: CoreAPIs.hpp  ca_assert.hpp  debug_config.hpp  object_properties.hpp  program_database.hpp
foundation/include/threading/: contention_free_mutex.hpp  partitioned_map.hpp  safe_object.hpp  safe_ptr.hpp  spinlock.hpp
foundation/src/Win32/: PDB_Helpers.cpp  PDB_Helpers.hpp  PluginManagerImpl.cpp
plugin_manager/: CMakeLists.txt  README.md
plugin_manager/include/: CoreAPIs.hpp  PluginAPI.hpp
plugin_manager/src/: PluginManager.cpp
plugin_manager/src/Win32/: PluginManagerImpl.cpp  PluginManagerImpl.hpp
plugins/: CMakeLists.txt  README.md
plugins/application_context/: ApplicationConfigEXAMPLE.json  CMakeLists.txt
plugins/application_context/include/: AppContextAPI.hpp  ApplicationConfigurationFile.hpp
plugins/application_context/include/dialog/: Dialog.hpp
plugins/application_context/include/filesystem/: FileManipulation.hpp  FileWatchWin32.hpp
plugins/application_context/include/memory/: Allocator.hpp
plugins/application_context/include/process/: ProcessID.hpp  ProcessInfo.hpp
plugins/application_context/src/: AppContextAPI.cpp  ApplicationConfigurationFile.cpp
plugins/application_context/src/dialog/: DialogMac.mm  DialogWin32.cpp
plugins/application_context/src/filesystem/: FileManipulationStd.cpp
plugins/application_context/src/memory/: Allocator.cpp
plugins/application_context/src/memory/impl/: AllocatorImpl.hpp  HeapAllocator.cpp  HeapAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp  SecureAllocator.cpp  SecureAllocator.hpp  SecureMemoryWin32.hpp  TemporaryAllocator.cpp  (+4 more)
plugins/application_context/src/platform/: GameModeWin32.cpp  GameModeWin32.hpp
plugins/application_context/src/process/: ProcessID.cpp  ProcessInfo.cpp  ProcessInfo_Mac.cpp  ProcessInfo_Win32.cpp  SystemInfo.hpp
plugins/content_compiler/: CMakeLists.txt  README.md
plugins/content_compiler/include/: AssimpMeshImporter.hpp  ContentCompilerAPI.hpp  MeshData.hpp  TinyObjImporter.hpp
plugins/content_compiler/src/: AssimpMeshImporter.cpp  ContentCompilerAPI.cpp  MeshData.cpp  TinyObjImporter.cpp
plugins/ecs_plugin/include/components/: AABB.hpp  DynamicState.hpp  MeshBufferComponents.hpp  NameComponent.hpp  ScriptComponent.hpp  TransformComponent.hpp
plugins/ecs_plugin/src/components/: NameComponent.cpp  TransformComponent.cpp
plugins/gui_plugin/: CMakeLists.txt
plugins/gui_plugin/include/: ImGuiWrapper.hpp  guiPluginAPI.hpp
plugins/gui_plugin/src/: ImGuiWrapper.cpp  guiPluginAPI.cpp
plugins/lua_plugin/: BindingGenerator.py
plugins/noise_plugin/: CMakeLists.txt  README.md
plugins/noise_plugin/assets/shaders/: NoiseConfig.lua  Resources.lua
plugins/noise_plugin/frontend/: main.cpp
plugins/noise_plugin/include/: ComputeDispatcher.hpp  ModuleTypes.hpp  NoiseModule.hpp  PipelineHash.hpp
plugins/noise_plugin/include/image/: Image.cpp  Image.hpp
plugins/noise_plugin/include/models/: Sphere.hpp
plugins/noise_plugin/include/modules/: Base.hpp  Base3D.hpp  Modules.hpp
plugins/noise_plugin/src/: PipelineHash.cpp
plugins/noise_plugin/src/modules/: Base.cpp
plugins/renderer_context/: CMakeLists.txt  example_config.json
plugins/renderer_context/include/: RendererContextAPI.hpp
plugins/renderer_context/include/core/: PlatformWindow.hpp  RendererContext.hpp  WindowInput.hpp
plugins/renderer_context/src/: RendererContextAPI.cpp
plugins/renderer_context/src/core/: PlatformWindow.cpp  RendererContext.cpp  WindowInput.cpp
plugins/rendergraph_plugin/: CMakeLists.txt
plugins/rendergraph_plugin/include/: PipelineSubmission.hpp  RenderGraph.hpp
plugins/rendergraph_plugin/src/: PipelineResource.cpp  PipelineSubmission.cpp
plugins/resource_context/: CMakeLists.txt
plugins/resource_context/include/: ResourceContext.hpp  ResourceContextAPI.hpp  ResourceLoader.hpp  ResourceTypes.hpp  TransferSystem.hpp
plugins/resource_context/include/objects/: Material.hpp  RenderTarget.hpp
plugins/resource_context/src/: FlatMap.hpp  ResourceContext.cpp  ResourceContextAPI.cpp  ResourceLoader.cpp  TransferSystem.cpp  UploadBuffer.hpp
plugins/terrain_plugin/: CMakeLists.txt
plugins/terrain_plugin/include/: HeightNode.hpp  HeightSample.hpp  NodeRenderer.hpp  Noise.hpp  PlanarMesh.hpp  TerrainNode.hpp  TerrainQuadtree.hpp
plugins/terrain_plugin/src/: HeightNode.cpp  Noise.cpp  PlanarMesh.cpp  TerrainNode.cpp  TerrainQuadtree.cpp
plugins/the_truth/include/: TheTruthAPI.hpp
tests/plugin_tests/: CMakeLists.txt
tests/plugin_tests/ArcballCameraTest/: ArcballScene.cpp  ArcballScene.hpp  CMakeLists.txt  main.cpp
tests/plugin_tests/ArcballCameraTest/cfg/: RendererContextCfg.json
tests/plugin_tests/RendererContextTriangleTest/: ApplicationConfig.json  CMakeLists.txt  Triangle.frag.spv  Triangle.vert  Triangle.vert.spv  VulkanTriangle.cpp  main.cpp
tests/plugin_tests/RendererContextTriangleTest/cfg/: ApplicationConfig.json
tests/plugin_tests/ResourceContextSceneTest/: ApplicationConfig.json  CMakeLists.txt  House.frag  House.frag.spv  House.vert  House.vert.spv  ObjModel.cpp  ObjModel.hpp  Skybox.frag  Skybox.frag.spv  Skybox.vert  Skybox.vert.spv  VulkanComplexScene.cpp  VulkanComplexScene.hpp  main.cpp
tests/plugin_tests/TerrainTest/: NodeRenderer.cpp  NodeRenderer.hpp
tests/plugin_tests/guiTest/: ImGuiWrapper.cpp  TetherSimScene.hpp  guiTestScene.cpp  main.cpp
tests/plugin_tests/test_fixtures/: ArcballCameraController.cpp  ArcballCameraController.hpp  ArcballHelper.cpp  ArcballHelper.hpp  Camera.cpp  Camera.hpp  CommonCreationFunctions.cpp  CommonCreationFunctions.hpp  ObjModel.cpp  ObjModel.hpp  VulkanScene.cpp  VulkanScene.hpp
(+611 files in other folders)
