LINK_LIBRARIES(VulpesRender)
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}/include")

IF (MSVC)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF()

ADD_EXECUTABLE(house "House.cpp")

SET(WINDOWS_BINARIES house)
SET_TARGET_PROPERTIES(${WINDOWS_BINARIES} PROPERTIES FOLDER "VulpesRender/scenes")

IF(MSVC) 
# need to specify main() as entry, not winmain()
SET_TARGET_PROPERTIES(${WINDOWS_BINARIES} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
ENDIF()