IF(WIN32)
SET(PLUGIN_MANAGER_IMPL 
    "${CMAKE_CURRENT_SOURCE_DIR}/src/Win32/PluginManagerImpl.hpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/src/Win32/PluginManagerImpl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/Win32/PDB_Helpers.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/Win32/PDB_Helpers.cpp"
)
SET(PLUGIN_MANAGER_IMPL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/Win32")
ELSEIF(UNIX)

ENDIF()

ADD_LIBRARY(plugin_manager STATIC 
    "${CMAKE_CURRENT_SOURCE_DIR}/include/CoreAPIs.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/include/PluginAPI.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/include/PluginManager.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/PluginManager.cpp"
    ${PLUGIN_MANAGER_IMPL}
)
TARGET_COMPILE_OPTIONS(plugin_manager PRIVATE ${HEPHAESTUS_CXX_FLAGS})
TARGET_INCLUDE_DIRECTORIES(plugin_manager PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include" ${PLUGIN_MANAGER_IMPL_INCLUDE_DIR})
TARGET_COMPILE_DEFINITIONS(plugin_manager PRIVATE "D_SCL_SECURE_NO_WARNINGS" "SCL_SECURE_NO_WARNINGS")
