SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

FUNCTION(ADD_PLUGIN NAME)
    ADD_LIBRARY(${NAME} SHARED ${ARGN})
    TARGET_INCLUDE_DIRECTORIES(${NAME} PRIVATE "../plugin_manager/include")
    TARGET_COMPILE_OPTIONS(${NAME} PRIVATE ${PLUGIN_CXX_FLAGS})
    TARGET_COMPILE_DEFINITIONS(${NAME} PRIVATE "DOCTEST_CONFIG_DISABLE")
    INSTALL(TARGETS ${NAME} LIBRARY DESTINATION "lib" ARCHIVE DESTINATION "lib"
        RUNTIME DESTINATION "bin")
        TARGET_COMPILE_DEFINITIONS(${NAME} PUBLIC 
        $<BUILD_INTERFACE:BUILDING_SHARED_LIBRARY>
        $<INSTALL_INTERFACE:USING_SHARED_LIBRARY>)
    SET_TARGET_PROPERTIES(${NAME} PROPERTIES FOLDER "Plugins")
    SET_TARGET_PROPERTIES(${NAME} PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED YES)
ENDFUNCTION()

ADD_SUBDIRECTORY(application_context)
ADD_SUBDIRECTORY(renderer_context)
ADD_SUBDIRECTORY(rendergraph_plugin)
ADD_SUBDIRECTORY(lua_plugin)
ADD_SUBDIRECTORY(resource_context)
