CMAKE_MINIMUM_REQUIRED(VERSION 3.7 FATAL_ERROR) 
PROJECT(CANIS_NOISE_FRONTEND)

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/cpu")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/cuda")

FILE(GLOB COMBINERS "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/combiners/*.hpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/combiners/*.cpp")
FILE(GLOB MODIFIERS "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/modifiers/*.hpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/modifiers/*.cpp")
FILE(GLOB GENERATORS "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/generators/*.hpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/generators/*.cpp")
FILE(GLOB UTILITY "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/utility/*.hpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/utility/*.cpp")
FILE(GLOB BASE "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/Base.hpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules/Base.cpp")
FILE(GLOB IMAGE "${CMAKE_CURRENT_SOURCE_DIR}/frontend/image/image.hpp" 
    "${CMAKE_CURRENT_SOURCE_DIR}/image/image.cpp")
FILE(GLOB COMMON "${CMAKE_CURRENT_SOURCE_DIR}/common/*.hpp")

SOURCE_GROUP("combiners" FILES ${COMBINERS})
SOURCE_GROUP("modifiers" FILES ${MODIFIERS})
SOURCE_GROUP("generators" FILES ${GENERATORS})
SOURCE_GROUP("utility" FILES ${UTILITY})
SOURCE_GROUP("image" FILES ${IMAGE})
SOURCE_GROUP("common" FILES ${COMMON})

SET(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/ext")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/ext/lib")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/ext/bin")
SET(CMAKE_INSTALL_INCLUDEDIR "${CMAKE_CURRENT_SOURCE_DIR}/ext/include")

ADD_EXECUTABLE(CANIS_NOISE_FRONTEND "${CMAKE_CURRENT_SOURCE_DIR}/frontend/main.cpp" 
    ${COMBINERS} ${MODIFIERS} ${GENERATORS} 
    ${UTILITY} ${BASE} ${IMAGE} ${COMMON})

IF(MSVC)
    TARGET_COMPILE_OPTIONS(CANIS_NOISE_FRONTEND PRIVATE "/std:c++17")
ENDIF()

TARGET_INCLUDE_DIRECTORIES(CANIS_NOISE_FRONTEND PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/ext/include/cpu" 
    "${CMAKE_CURRENT_SOURCE_DIR}/ext/include/cuda")
TARGET_INCLUDE_DIRECTORIES(CANIS_NOISE_FRONTEND PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/frontend/modules")
TARGET_INCLUDE_DIRECTORIES(CANIS_NOISE_FRONTEND PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/common")
TARGET_LINK_LIBRARIES(CANIS_NOISE_FRONTEND CANIS_CPU_BACKEND CANIS_CUDA_BACKEND)