
FUNCTION(ADD_PLUGIN_TEST NAME)
    ADD_EXECUTABLE(${NAME} ${ARGN})
    TARGET_INCLUDE_DIRECTORIES(${NAME} PRIVATE
        "../../../plugin_manager/include"
        "../../../ext/include"
    )
    TARGET_COMPILE_DEFINITIONS(${NAME} PUBLIC 
        $<BUILD_INTERFACE:BUILDING_SHARED_LIBRARY> $<INSTALL_INTERFACE:USING_SHARED_LIBRARY>)
    TARGET_LINK_LIBRARIES(${NAME} PRIVATE plugin_manager)
    SET_TARGET_PROPERTIES(${NAME} PROPERTIES FOLDER "Plugin Tests")
    SET_TARGET_PROPERTIES(${NAME} PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED YES)
ENDFUNCTION()

ADD_SUBDIRECTORY(RendererContextTriangleTest)
ADD_SUBDIRECTORY(ResourceContextSceneTest)
