
FUNCTION(ADD_PLUGIN_TEST NAME)
    ADD_EXECUTABLE(${NAME} ${ARGN})
    TARGET_INCLUDE_DIRECTORIES(${NAME} PRIVATE
        "../../../plugin_manager/include"
        "../../../ext/include"
    )
    TARGET_COMPILE_DEFINITIONS(${NAME} PUBLIC 
        $<BUILD_INTERFACE:BUILDING_SHARED_LIBRARY> $<INSTALL_INTERFACE:USING_SHARED_LIBRARY>
        "NOMINMAX" "_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS")
    IF(MSVC)
        # Multithreaded compile, and intrinsic functions
        TARGET_COMPILE_OPTIONS(${NAME} PRIVATE $<$<CONFIG:RELEASE>:/MP> $<$<CONFIG:RELWITHDEBINFO>:/MP>)
        TARGET_COMPILE_OPTIONS(${NAME} PRIVATE $<$<CONFIG:RELEASE>:/Oi>)
    ENDIF()
    TARGET_LINK_LIBRARIES(${NAME} PRIVATE plugin_manager)
    SET_TARGET_PROPERTIES(${NAME} PROPERTIES FOLDER "Plugin Tests")
    SET_TARGET_PROPERTIES(${NAME} PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED YES)
ENDFUNCTION()

ADD_SUBDIRECTORY(RendererContextTriangleTest)
ADD_SUBDIRECTORY(ResourceContextSceneTest)